# generalized-dex

./: .gitignore  Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/dex-core/: Cargo.toml
pallets/exchange/: Cargo.toml
pallets/exchange/src/: lib.rs  mock.rs  test.rs
pallets/oracle/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
