[package]
name = "generalized-dex-runtime"
version = "0.0.0"
authors = []
edition = "2018"

[dependencies]
pallet-exchange = { path = "../pallets/exchange", version = "0.0.0" }
pallet-grandpa = { version = "2.0.0" }
pallet-babe = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }
sp-core = { version = "2.0.0" }
sp-version = { version = "2.0.0" }
frame-support = { version = "2.0.0" }
parity-scale-codec = { version = "1.3.4" }
serde = { version = "1.0.101" }
